--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -5,7 +5,25 @@ on:
       - master
 jobs:
   run-shell-command:
-    run-on: ubuntu-latest
+    runs-on: ubuntu-latest
     steps:
       - name: run-shell-command-step
-      run: echo "hello world"
+        run: echo "hello world"
+      - name: echo step
+        run: |
+          echo "This is my first CI/CD pipeline"
+          echo "event name is :::>>> ${{github.event.name}}" 
+          echo "Hello ${{ github.event_name }} 
+          echo "github.event.ref ::>> "${{ github.event.ref }} 
+          echo "github.event.repository::>>" ${{ github.event.repository }}
+          echo "github.event.pusher::>>" ${{ github.event.pusher }} 
+          echo "github.event.sender::>>"${{ github.event.sender }}
+          echo "github.event.head_commit.message::>>"${{ github.event.head_commit.message }}
+          echo "github.event.head_commit.id::>>" ${{ github.event.head_commit.id }}
+          echo "github.event.head_commit.timestamp ::" ${{ github.event.head_commit.timestamp }} 
+          echo "github.event.head_commit.author.name::>>" ${{ github.event.head_commit.author.name }}
+          echo "github.event.head_commit.author.email" ${{ github.event.head_commit.author.email }}
+          echo "github.event.head_commit.author.username" ${{ github.event.head_commit.author.username }}
+          echo "github.event.head_commit..committer.name" ${{ github.event.head_commit.committer.name }} 
+          echo "github.event.head_commit..committer.email" ${{ github.event.head_commit.committer.email }} 
+          echo "github.event.head_commit..committer.username" ${{ github.event.head_commit.committer.username }}
