add extra workflow commanfs

--- a/.github/workflows/firstci.yaml
+++ b/.github/workflows/firstci.yaml
@@ -8,3 +8,7 @@ jobs:
     steps:
       - name: print hello world
         run: echo "hello world"
+      - name: run multi-line-command
+        run: |
+          node -v
+          echo "npm version" npm -v
