--- a/.github/workflows/firstci.yaml
+++ b/.github/workflows/firstci.yaml
@@ -24,4 +24,4 @@ jobs:
     needs: [run-shell-command, parallel-job]
     steps:
       - name: dependent job step
-        run: echo "this is a dependant job"
+        run: echo "This is a dependant job"
